--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 </h3>
                 <hr />
                 <ul class="social">
-                    <li><a href="https://www.facebook.com/quinton.shabangu"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://plus.google.com/105325225043471818268"><i class="fa fa-google-plus"></i></a></li>
+                    <!-- <li><a href="https://www.facebook.com/quinton.shabangu"><i class="fa fa-facebook"></i></a></li> -->
+                    <!-- <li><a href="https://plus.google.com/105325225043471818268"><i class="fa fa-google-plus"></i></a></li> -->
                     <li><a href="https://www.linkedin.com/in/quinton-shabangu-91ab1795/"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://www.instagram.com/quintonshabangu/"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.instagram.com/shabanguquinton/"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://github.com/quintonshabangu"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://soundcloud.com/bandile-q-shabangu"><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
+                    <li><a href="https://soundcloud.com/bandile-q-shabangu"><i class="fa fa-soundcloud"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -74,8 +74,7 @@
                 <h2>About Me</h2>
                 <p>
                     I'm a professional software engineer. I graduated from the University of Johannesburg in 2015.
-                    I've been working as a dev ever since. I also consider myself as a bit of a musician on a good day.
-                    I am very passionate about software development and my music.
+                    I've been working as a full stack developer ever since. I also consider myself as a bit of a musician on a good day.
                 </p>
                 <div class="row">
                     <div class="columns contact-details">
@@ -131,12 +130,51 @@
             <div class="nine columns main-col">
                 <div class="row item">
                     <div class="twelve columns">
-                        <h3>Entelect</h3>
-                        <p class="info">Software Engineer <span>&bull;</span> <em class="date">November 2016 - Present</em></p>
+                        <h3>Investec</h3>
+                        <p class="info">Software Engineer <span>&bull;</span> <em class="date">Sep 2022 - Present</em></p>
                         <p>
-                            I joined Entelect because of the reputation that they had of delivering quality software and aqcuiring the most skilled
-                            individuals. The training received from Entelect is of the highest quality and working with people who have experience was a
-                            new experice for me.
+                            
+                        </p>
+                    </div>
+                </div> <!-- item end -->
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3>Investec</h3>
+                        <p class="info">Software Engineer <span>&bull;</span> <em class="date">Apr 2021 - Sep 2022</em></p>
+                        <p>
+                            
+                        </p>
+                    </div>
+                </div> <!-- item end -->
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3>DVT</h3>
+                        <p class="info">.NET Software Developer<span>&bull;</span> <em class="date">Oct 2019 - Apr 2021</em></p>
+                        <p>
+                            Working at DVT was my return to consulting. It was very fulfilling because it was my return to full-stack development and
+                            there was a lot of short term projects (6 months) that I worked on and completed. The stack was also .NET and Angular for the majority of 
+                            the projects.
+                        </p>
+                    </div>
+                </div> <!-- item end -->
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3>Investec</h3>
+                        <p class="info">Front End Developer <span>&bull;</span> <em class="date">Jun 2018 - Sep 2019</em></p>
+                        <p>
+                            Investec was my first "Corporate" experiece. I got to wear suit and tie and look all professional. It was a great learning curve and 
+                            a new challenge focusing on only being a front-end developer. It was a great exposure to work in an environment where the client comes
+                            first in all aspects. The tech stack was mainly Angular (legacy and newer versions).
+                        </p>
+                    </div>
+                </div> <!-- item end -->
+                <div class="row item">
+                    <div class="twelve columns">
+                        <h3>Entelect</h3>
+                        <p class="info">Software Engineer <span>&bull;</span> <em class="date">November 2016 - May 2018</em></p>
+                        <p>
+                            Working at Entelect was a great experience because we moved around a lot which meant I learned a lot very quickly. I worked as a 
+                            .NET developer with some full stack projects here and there.
                         </p>
                     </div>
                 </div> <!-- item end -->
@@ -145,9 +183,8 @@
                         <h3>Boxfusion</h3>
                         <p class="info">Intern Software Developer <span>&bull;</span> <em class="date">January 2016 - October 2016</em></p>
                         <p>
-                            Boxfusion was my first job. It was a great learning experience for me because it was still growing. The best thing I
-                            took away from my time there was the mindset of getting things done within the required time regardless of the challenges.
-                            It is a mindset I feel every devloper should have.
+                            I worked as an intern on off the shelf systems. We were mostly focused on Government projects. The tech was mainly .NET web forms with old-school
+                            front-end frameworks such as knockout.js and jQuery.
                         </p>
                     </div>
                 </div> <!-- item end -->
@@ -162,17 +199,14 @@
             <div class="nine columns main-col">
                 <p>
                     most projects I've professionally worked on are .NET projects but I always doodle around with more
-                    tech such Spring, and some front-end frameworks such as Angular and React.js
+                    tech such as Node.js, and other front-end networks
                 </p>
                 <div class="bars">
                     <ul class="skills">
-                        <li><span class="bar-expand sixty-percent"></span><em>.NET MVC</em></li>
+                        <li><span class="bar-expand seventy-percent"></span><em>.NET</em></li>
                         <li><span class="bar-expand fourty-percent"></span><em>SQL Server</em></li>
-                        <li><span class="bar-expand thirty-percent"></span><em>Xamarin</em></li>
-                        <li><span class="bar-expand fifty-percent"></span><em>Angular</em></li>
-                        <li><span class="bar-expand thirty-percent"></span><em>React</em></li>
-                        <li><span class="bar-expand fourty-percent"></span><em>jQuery</em></li>
-                        <li><span class="bar-expand thirty-percent"></span><em>React Native</em></li>
+                        <li><span class="bar-expand fourty-percent"></span><em>Azure</em></li>
+                        <li><span class="bar-expand sixty-percent"></span><em>Angular</em></li>
                         <li><span class="bar-expand hundred-percent"></span><em>Willingness to learn new technologies</em></li>
                     </ul>
                 </div><!-- end skill-bars -->
