--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <div class="nine columns main-col">
                 <div class="row item">
                     <div class="twelve columns">
-                        <h3>Investec</h3>
-                        <p class="info">Software Engineer <span>&bull;</span> <em class="date">Sep 2022 - Present</em></p>
+                        <h3>Kumba Iron Ore</h3>
+                        <p class="info">Full Stack Software Engineer<span>&bull;</span> <em class="date">Sep 2022 - Present</em></p>
                         <p>
                             
                         </p>
@@ -140,7 +140,7 @@
                 <div class="row item">
                     <div class="twelve columns">
                         <h3>Investec</h3>
-                        <p class="info">Software Engineer <span>&bull;</span> <em class="date">Apr 2021 - Sep 2022</em></p>
+                        <p class="info">.NET Software Engineer<span>&bull;</span> <em class="date">Apr 2021 - Sep 2022</em></p>
                         <p>
                             
                         </p>
